objects/iahelp__HelpBookmark__c.object
<CustomObject>
    <description>A Help Topic bookmarked by a Helped User</description>
    <fields>
        <fullName>iahelp__HelpBookmarkLabel__c</fullName>
        <description>Optional label to use to refer to the Bookmark instead of Help Topic Name</description>
        <inlineHelpText>Optional label to use to refer to the Bookmark instead of Help Topic Name</inlineHelpText>
        <label>Help Bookmark Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Help Topic that has been bookmarked</inlineHelpText>
        <label>Help Topic</label>
        <referenceTo>iahelp__HelpTopic__c</referenceTo>
        <relationshipLabel>Help Bookmarks</relationshipLabel>
        <relationshipName>Help_Bookmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__TopicURL__c</fullName>
        <inlineHelpText>A link to display the bookmarked Help Topic in the correct Topic-specified Help Topic Template</inlineHelpText>
        <label>Topic URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Help Bookmark</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Help Bookmark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Bookmarks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>